--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -120,7 +120,7 @@ search:
 comment:
     type: disqus
     # Disqus shortname
-    shortname: ''
+    shortname: 'ctsai01-github-io'
 # Donate plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Donation/
 donates:
