--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -224,7 +224,7 @@ widgets:
     # Categories widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
-        position: left
+        position: right
         type: categories
     # Recent posts widget configurations
     -
