--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -210,7 +210,7 @@ widgets:
     # Table of contents widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
-        position: left
+        position: right
         type: toc
     # Recommendation links widget configurations
     -
