add rss feature

--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -183,7 +183,7 @@ widgets:
         # Author's current location
         location: Taipei
         # URL or path to the avatar image
-        avatar: 
+        avatar: https://static.independent.co.uk/s3fs-public/thumbnails/image/2016/11/16/12/homer-simpson.jpeg?w968
         # Whether show the rounded avatar image
         avatar_rounded: false
         # Email address for the Gravatar
