--- a/_config.yml
+++ b/_config.yml
@@ -107,3 +107,16 @@ deploy:
   type: ''
 
 
+# RSS 
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
+  order_by: -date
+  icon: icon.png
+  autodiscovery: true
+  template:
