--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-component-inferno": "^0.4.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "^2.2.0",
     "hexo-generator-index": "^1.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-log": "^1.0.0",
