--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -249,7 +249,7 @@ widgets:
         # Hint text under the email input
         description: 
         # Feedburner ID
-        feedburner_id: ''
+        feedburner_id: github/wFqC
     # Google AdSense unit configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
