--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -3,7 +3,9 @@ version: 3.0.0
 # Icarus theme variant, can be "default" or "cyberpunk"
 variant: default
 # Path or URL to the website's logo
-logo: /img/logo.svg
+# logo: /img/logo.svg
+logo: 
+    text: Mike's Blog
 # Page metadata configurations
 head:
     # URL or path to the website's icon
@@ -68,7 +70,7 @@ head:
         # E.g., name=theme-color;content=#123456 => <meta name="theme-color" content="#123456">
         - ''
     # URL or path to the website's RSS atom.xml
-    rss: 
+    rss: /atom.xml
 # Page top navigation bar configurations
 navbar:
     # Naviagtion menu items
@@ -206,7 +208,7 @@ widgets:
                 url: 'https://dribbble.com'
             RSS:
                 icon: fas fa-rss
-                url: /
+                url: /atom.xml
     # Table of contents widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
