--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "hexo-log": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-inferno": "^0.1.3",
-    "hexo-renderer-marked": "^3.0.0",
+    "hexo-renderer-markdown-it": "^4.1.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
     "hexo-util": "^1.9.1",
