--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -9,7 +9,8 @@ logo:
 # Page metadata configurations
 head:
     # URL or path to the website's icon
-    favicon: /img/favicon.svg
+    # favicon: /img/favicon.svg
+    favicon: /img/test.ico
     # Open Graph metadata
     # https://hexo.io/docs/helpers.html#open-graph
     open_graph:
